--- a/about.html
+++ b/about.html
@@ -21,44 +21,21 @@
             </div>
             <ul class="nav-categories">
                 <li class="nav-item visible-md">
-                    <a class="nav-link active" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item visible-md">
                     <a class="nav-link">Tutorial</a>
                 </li>
                 <li class="nav-item visible-md">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active">About</a>
                 </li>
             </ul>
         </nav>
         <hr>
     </header>
-    <div class="row">
-        <div class="col-sm-12 col-md-12">
-            <button id="start">Start</button>
-            <button id="reset">Reset</button>
-            <button id="clear">Clear</button> 
-        </div>
-        <div class="col-sm-12 col-md-12">
-            <div id="grid-templates">
-                <div class="grid-row">
-                    <div class="standard-node"></div>
-                    <div class="house-node"></div>
-                    <div class="destination-node"></div>
-                    <div class="road-node"></div>
-                </div>
-            </div>
-            <div id="main-grid"></div>
-        </div>
-    </div>
+
     <div>
-        <ul>
-            To Do List:
-            <li>Style Buttons</li>
-            <li>Code Backtracking</li>
-            <li>DFS</li>
-            <li>Add Tutorial and About pages</li>
-        </ul>
+        Inspired by <a href="https://clementmihailescu.github.io/Pathfinding-Visualizer">Clement Mihailescu's Pathfinding Algorithm Visualizer.</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
