More bug fixes: BFS runtime issues, lag

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <div>
         <ul>
             To Do List:
+            <li>Fix requestAnimationFrame in BFS</li>
             <li>Code Backtracking</li>
             <li>DFS</li>
             <li>Add Tutorial and About pages</li>
