Changed animations to transitions, added path to BFS

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     <div>
         <ul>
             To Do List:
-            <li>Fix requestAnimationFrame in BFS</li>
             <li>Code Backtracking</li>
-            <li>DFS</li>
+            <li>Moveable start and end nodes</li>
+            <li>DFS/Other algorithms</li>
             <li>Add Tutorial and About pages</li>
         </ul>
     </div>
@@ -85,6 +85,7 @@
     <script src="js/node.js"></script>
     <script src="js/grid.js"></script>
     <script src="js/bfs.js"></script>
+    <script src="js/dijkstra.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
